<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <ImageView
            android:id="@+id/invitations_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_email"
            android:background="@drawable/text_selector"/>

        <ImageView
            android:id="@+id/achievements_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_games_achievements"
            android:background="@drawable/text_selector"/>

        <ImageView
            android:id="@+id/leaderboards_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_games_leaderboards"
            android:background="@drawable/text_selector"/>

        <ImageView
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_refresh"
            android:background="@drawable/text_selector"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/music_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_volume_on"
            android:background="@drawable/text_selector"/>
        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_name"
        style="@style/TitleText"/>

    <TextView
        android:id="@+id/normal_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_normal"
        style="@style/MenuItemText"/>

    <TextView
        android:id="@+id/rush_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_rush"
        style="@style/MenuItemText"/>

    <TextView
        android:id="@+id/multiplayer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_multiplayer"
        style="@style/MenuItemText"/>

    <TextView
        android:id="@+id/google_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google_sign_in"
        style="@style/MenuItemText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center">

        <TextView
            android:id="@+id/score_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/default_score"
            style="@style/MenuItemText"/>

        <TextView
            android:id="@+id/score_rush_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/default_score"
            style="@style/MenuItemText"/>

        </LinearLayout>


</LinearLayout>
